compiler/tools/fpp-check/test/undef_constant_1.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/undef_constant_1.fpp: 1.14
constant b = a
             ^
error: undefined symbol a
